src/styles/home.css
.infoBox {
	position: fixed;
	display: flex;
	align-items: center;
	justify-content: center;
	height: 100vh;
	max-width: 1164px;
	width: calc(100% - 36px);
	transform: translate3d(26px, 0px, 0px);
}

.logoBox {
	z-index: 1;
	order: 1;
	flex: 1 1;
	flex-shrink: 0;
	max-height: 280px;
	min-height: 280px;
	max-width: 280px;
	min-width: 280px;
	display: flex;
	align-items: center;
	justify-content: center;
	filter: drop-shadow(0 10px 40px rgba(0,0,0,.5));
}

.logo {
	flex: 1 1;
	flex-shrink: 0;
	max-height: 280px;
	min-height: 280px;
	max-width: 280px;
	min-width: 280px;
	background-color: #FFF;
	box-shadow: inset 3px 3px 60px rgba(0,0,0,.5);
	transform: rotateZ(45deg);
	border-width: 68px;
	border-style: solid;
	border-image: linear-gradient(to bottom right,#ffd575,#f5ab00);
	border-image-slice: 1;
}

.textBox {
	order: 2;
	flex: 1 1;
	height: 100%;
	max-width: 500px;
	width: 100%;
}

.contentBox {
	height: 100%;
	width: calc(100% + 90px);
	position: relative;
	left: -140px;
	display: flex;
	align-items: center;
	justify-content: center;
	flex-direction: column;
	&>* {
		flex: 1 1;
		flex-grow: 0;
	}
}

.titles {
	height: 100px;
	width: 100%;
	line-height: 100px;
	font-size: 80px;
	overflow: hidden;
	min-height: 100px;
	font-family: Palatino, "Palatino Linotype", "Palatino LT STD", "Book Antiqua", Amiri, Georgia, serif;
	.titleBox {
		padding-left: 140px;
		max-width: 2140px;
		width: calc(400vw + 140px);
		.title {
			max-width: 500px;
			width: calc(100vw - 36px);
			padding-left: 62px;
			float: left;
		}
	}
}

.captions {
	height: 40px;
	width: 100%;
	line-height: 20px;
	font-size: 20px;
	overflow: hidden;
	min-height: 40px;
	margin-bottom: 10px;
	.captionBox {
		padding-left: 140px;
		max-width: 2140px;
		width: calc(400vw + 140px);
		.caption {
			max-width: 500px;
			width: calc(100vw - 36px);
			padding-left: 65px;
			float: left;
		}
	}
}

.buttons {
	padding-left: 64px;
	user-select: none;
	.button {
		float: left;
		border: 0;
		height: 50px;
		line-height: 50px;
		font-size: 20px;
		padding: 0 15px;
		margin: 0 10px;
		outline: none;
		border-bottom: 0 solid #FFB200;
		background-color: rgba(255,255,255,.7);
		box-shadow: 0 5px 20px rgba(0,0,0,.5);
		transition: border-bottom 200ms, box-shadow 200ms;
		cursor: pointer;
		&:hover {
			border-bottom: 5px solid #FFB200;
			box-shadow: 0 10px 30px rgba(0,0,0,.5);
		};
	}
}

.block {
	height: 400vh;
	width: 100%;
}

@media screen and (max-width: 640px) {
	.infoBox {
		flex-direction: column;
    justify-content: space-between;
		transform: translate3d(0px, 0px, 0px);
	}

	.logoBox {
		z-index: 0;
		min-height: 220px;
		min-width: 220px;
		transform: translate3d(0px, 120px, 0px);
	}

	.logo {
		max-height: 220px;
		min-height: 220px;
		max-width: 220px;
		min-width: 220px;
		border-width: 53px;
	}

	.textBox {
		height: auto;
		overflow: hidden;
	}

	.contentBox {
		z-index: 1;
		width: calc(100% + 140px);
	}

	.captions .captionBox .caption, .titles .titleBox .title {
		padding-left: 5px;
	}

	.titles {
		font-size: 60px;
		min-height: 80px;
		line-height: 80px;
	}

	.buttons {
		padding-left: 140px;
	}
}

